--- a/BustansFavs/Favs.html
+++ b/BustansFavs/Favs.html
@@ -10,16 +10,16 @@
 
     <div class="nav-bar">
         <ul>
-            <li class="nav-buttons"><a href="/for her/HomePage/HomePage.html">Home Page</a></li>
-            <li class="nav-buttons"><a href="/for her/More/More.html">Extra Paragraph</a></li>
-            <li class="nav-buttons"><a href="/for her/BustansFavs/Favs.html">Your Fav's</a></li>
-            <li class="nav-buttons"><a href="/for her/SpecialPage/SpecialPage.html">Special Page :)</a></li>
+            <li class="nav-buttons"><a href="/ForHer/HomePage/HomePage.html">Home Page</a></li>
+            <li class="nav-buttons"><a href="/ForHer/More/More.html">Extra Paragraph</a></li>
+            <li class="nav-buttons"><a href="/ForHer/BustansFavs/Favs.html">Your Fav's</a></li>
+            <li class="nav-buttons"><a href="/ForHer/SpecialPage/SpecialPage.html">Special Page :)</a></li>
         </ul>
     </div>
 
     <div>
-        <img id="background1" src="/for her/icons/favorite.png">
-        <img id="background2" src="/for her/icons/lovecd.png">
+        <img id="background1" src="/ForHer/icons/favorite.png">
+        <img id="background2" src="/ForHer/icons/lovecd.png">
     </div>
 
 
@@ -106,15 +106,15 @@
             
         </ul>
 
-        <img id="glow1" src="/for her/icons/glow.png">
+        <img id="glow1" src="/ForHer/icons/glow.png">
         
         <div id="gallery">
-            <img id="image1" src="/for her/icons/star.png">
-            <img id="image2" src="/for her/icons/star.png">
-            <img id="image3" src="/for her/icons/star.png">
-            <img id="image4" src="/for her/icons/star.png">
-            <img id="image5" src="/for her/icons/star.png">
-            <img id="image6" src="/for her/icons/star.png">
+            <img id="image1" src="/ForHer/icons/star.png">
+            <img id="image2" src="/ForHer/icons/star.png">
+            <img id="image3" src="/ForHer/icons/star.png">
+            <img id="image4" src="/ForHer/icons/star.png">
+            <img id="image5" src="/ForHer/icons/star.png">
+            <img id="image6" src="/ForHer/icons/star.png">
         </div>
         <br><br><br><br><br><br>
         <br><br><br><br><br><br>
@@ -122,12 +122,12 @@
         <br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br>
         <div id="gallery">
-            <img id="image1" src="/for her/icons/star.png">
-            <img id="image2" src="/for her/icons/star.png">
-            <img id="image3" src="/for her/icons/star.png">
-            <img id="image4" src="/for her/icons/star.png">
-            <img id="image5" src="/for her/icons/star.png">
-            <img id="image6" src="/for her/icons/star.png">
+            <img id="image1" src="/ForHer/icons/star.png">
+            <img id="image2" src="/ForHer/icons/star.png">
+            <img id="image3" src="/ForHer/icons/star.png">
+            <img id="image4" src="/ForHer/icons/star.png">
+            <img id="image5" src="/ForHer/icons/star.png">
+            <img id="image6" src="/ForHer/icons/star.png">
         </div>
         <br><br><br><br><br><br>
         <br><br><br><br><br><br>
@@ -135,12 +135,12 @@
         <br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br>
         <div id="gallery">
-            <img id="image1" src="/for her/icons/star.png">
-            <img id="image2" src="/for her/icons/star.png">
-            <img id="image3" src="/for her/icons/star.png">
-            <img id="image4" src="/for her/icons/star.png">
-            <img id="image5" src="/for her/icons/star.png">
-            <img id="image6" src="/for her/icons/star.png">
+            <img id="image1" src="/ForHer/icons/star.png">
+            <img id="image2" src="/ForHer/icons/star.png">
+            <img id="image3" src="/ForHer/icons/star.png">
+            <img id="image4" src="/ForHer/icons/star.png">
+            <img id="image5" src="/ForHer/icons/star.png">
+            <img id="image6" src="/ForHer/icons/star.png">
         </div>
         <br><br><br><br><br><br>
         <br><br><br><br><br><br>
@@ -148,18 +148,18 @@
         <br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br>
         <div id="gallery">
-            <img id="image1" src="/for her/icons/star.png">
-            <img id="image2" src="/for her/icons/star.png">
-            <img id="image3" src="/for her/icons/star.png">
-            <img id="image4" src="/for her/icons/star.png">
-            <img id="image5" src="/for her/icons/star.png">
-            <img id="image6" src="/for her/icons/star.png">
+            <img id="image1" src="/ForHer/icons/star.png">
+            <img id="image2" src="/ForHer/icons/star.png">
+            <img id="image3" src="/ForHer/icons/star.png">
+            <img id="image4" src="/ForHer/icons/star.png">
+            <img id="image5" src="/ForHer/icons/star.png">
+            <img id="image6" src="/ForHer/icons/star.png">
         </div>
     </div>
 
     <div id="box2">
         <p>I value and remember your favorite things, Because i know it makes you smile when i remember things you like. And i love your smile :). I love you so much. Now you can finally go ahead and click on the Special Page :)))). Hope you love it!!!</p>
-        <img id="glow2" src="/for her/icons/glow.png">
+        <img id="glow2" src="/ForHer/icons/glow.png">
     </div>
 
 </body>
