--- a/More/More.html
+++ b/More/More.html
@@ -12,17 +12,17 @@
 
     <div class="nav-bar">
         <ul>
-            <li class="nav-buttons"><a href="/for her//HomePage/HomePage.html">Home Page</a></li>
-            <li class="nav-buttons"><a href="/for her/More//More.html">Extra Paragraph</a></li>
-            <li class="nav-buttons"><a href="/for her/BustansFavs/Favs.html">Your Fav's</a></li>
-            <li class="nav-buttons"><a href="/for her/SpecialPage/SpecialPage.html">Special Page :)</a></li>
+            <li class="nav-buttons"><a href="/ForHer/HomePage/HomePage.html">Home Page</a></li>
+            <li class="nav-buttons"><a href="/ForHer/More/More.html">Extra Paragraph</a></li>
+            <li class="nav-buttons"><a href="/ForHer/BustansFavs/Favs.html">Your Fav's</a></li>
+            <li class="nav-buttons"><a href="/ForHer/SpecialPage/SpecialPage.html">Special Page :)</a></li>
         </ul>
     </div>
 
 
     <div>
-        <img id="background1" src="/for her/icons/handheart.png">
-        <img id="background2" src="/for her/icons/heartphotos.png">
+        <img id="background1" src="/ForHer/icons/handheart.png">
+        <img id="background2" src="/ForHer/icons/heartphotos.png">
     </div>
 
     <h1 class="h1">More Things i wanna tell you<hr class="hr"></h1>
@@ -46,20 +46,20 @@
                   <br><br>You are my missing piece in my life. You are my <ins>everything</ins>.
               
         </p>
-        <img id="glow1" src="/for her/icons/glow.png">
+        <img id="glow1" src="/ForHer/icons/glow.png">
     </div>
 
     <div id="gallery">
-        <img id="image1" src="/for her/Photos/bustan24.jpg">
-        <img id="image2" src="/for her/Photos/bustan22.PNG">
-        <img id="image3" src="/for her/Photos/bustan18.PNG">
-        <img id="image4" src="/for her/Photos/bustan7.jpg">
-        <img id="image5" src="/for her/Photos/bustan13.jpg">
-        <img id="image6" src="/for her/Photos/Bustan4.jpg">
+        <img id="image1" src="/ForHer/Photos/bustan24.jpg">
+        <img id="image2" src="/ForHer/Photos/bustan22.PNG">
+        <img id="image3" src="/ForHer/Photos/bustan18.PNG">
+        <img id="image4" src="/ForHer/Photos/bustan7.jpg">
+        <img id="image5" src="/ForHer/Photos/bustan13.jpg">
+        <img id="image6" src="/ForHer/Photos/Bustan4.jpg">
     </div>
 
     <div class="box2">
-        <img id="glow2" src="/for her/icons/glow.png">
+        <img id="glow2" src="/ForHer/icons/glow.png">
         <h1 id="I">I</h1>
 
         <div id="Love">
