--- a/HomePage/HomePage.html
+++ b/HomePage/HomePage.html
@@ -254,7 +254,7 @@
                                     </p>
 
 
-                                    <p id="p1">9-Your <ins>Personality</ins><br> <br><br> <img id="beauty5" src="/ForHer/Photos/Bustan15.jpg"><img id="beauty6" src="/ForHer/Photos/bustan11.jpg"><img id="beauty7" src="/for her/Photos/bustan12.jpg"><br><br><br><br><hr class="hr" color="white" size="5" width="554px"> <br><br><br>
+                                    <p id="p1">9-Your <ins>Personality</ins><br> <br><br> <img id="beauty5" src="/ForHer/Photos/bustan15.jpg"><img id="beauty6" src="/ForHer/Photos/bustan11.jpg"><img id="beauty7" src="/ForHer/Photos/bustan12.jpg"><br><br><br><br><hr class="hr" color="white" size="5" width="554px"> <br><br><br>
                                         i LOVEEE your personality. We are so much alike, We have the same humor and the same thinking. Not to mention that you're so funny you make me smile on the day i hangout with you MORE than in my entire week. Your sense of humor truly never fails to brighten my day. Your charm and positive energy make every moment spent with you a joy. I like how you are not too goofy but also not too serious. Its truly amazing how we click so well together. You make me feel safe and comfortable with you, You make me feel accepted and not feel weird. I love it so much. Your personality is truly amazing, my love.
                                          <br><br><br><hr style="border-radius: 16px;" color="white" size="5"> </p>
                                         </p>
